tested implementation of rock paper scissors project into js and html of the website and, minor spelling + spacing corrections

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -101,6 +101,12 @@ video {
     height: auto;
 }
 
+.project--footer--p {
+    font-weight: bold;
+    font-style: italic;
+    padding-top: 10px;
+}
+
 footer {
     text-align: right;
     padding: 10px 20px;
